# Final-Project---Warehouse-System-SRC

./: .gitignore  .~lock.TTTC2343_Final_Report_Autonomous_Warehouse_Robot_Group_11.docx#  FINAL_REPORT_DRAFT.md  README.md  README_WORLD_LAUNCHING.md  W9_AUTONOMOUS_MAPPING_README.txt  compile_pdf.py  implementation_plan.md  map_improvement_plan.md  phase3_qr_code_implementation_plan.md  run_autonomous_navigation.sh  run_mapping_terminals.sh  screenshot_loop.py  task.md  w9_autonomous_slam_mapper.py  walkthrough.md
.agents/: AGENTS.md  ds5_teleop.yaml  run_autonomous_navigation.sh  run_depth_mapping.sh  run_manual_mapping.sh  run_manual_mapping_keyboard.sh  w9_multi_point_nav.py  w9_warehouse_ui.py
references/warehouse_robot_danish/: CMakeLists.txt  README_RUN_FIRST.txt  package.xml  setup_qr_model.sh
references/warehouse_robot_danish/launch/: demo_inventory_delivery.launch  spawn_turtlebot3_waffle_pi.launch  view_world_only.launch
references/warehouse_robot_danish/models/qr_shelf_a/: model.config  model.sdf
references/warehouse_robot_danish/models/qr_shelf_a/materials/scripts/: qr_shelf_a.material
references/warehouse_robot_danish/scripts/: inventory_status_publisher.py  operator_panel.py  qr_scanner.py
references/warehouse_robot_danish/worlds/: danish_inventory_delivery_warehouse.world
src/Wk10_warehouse_robot/: CMakeLists.txt  README.md  package.xml
src/Wk10_warehouse_robot/docs/: SETUP_AND_RUN.md
src/Wk10_warehouse_robot/launch/: autonomous_mission.launch  manual_world.launch  mapping.launch  mission_only.launch  navigation_waypoint_mission.launch  spawn_robot.launch  warehouse_navigation.launch  warehouse_world.launch
src/Wk10_warehouse_robot/scripts/: delivery_runner.py  inventory_checker.py  mission_controller.py  waypoint_mission.py  zone_detector.py
src/Wk10_warehouse_robot/worlds/: custom_warehouse.world
src/warehouse_robot_danish/config/: costmap_common_params.yaml  depth_costmap_params.yaml  depth_scan_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mapping.rviz
src/warehouse_robot_danish/launch/: custom_warehouse_world.launch  spawn_turtlebot3_burger.launch  tiago_mapping.launch  tiago_mapping_depth.launch  tiago_navigation.launch  tiago_spawn.launch
(+33 files in other folders)
