<?xml version="1.0"?>
<package format="2">
  <name>warehouse_robot_danish</name>
  <version>1.0.0</version>
  <description>Autonomous Warehouse Inventory and Item Delivery Robot using TurtleBot3 Burger in a customized AWS RoboMaker warehouse world.</description>
  <maintainer email="danish@example.com">Danish Irfan Bin Hakimi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>aws_robomaker_small_warehouse_world</exec_depend>

  <export>
  </export>
</package>
